# simple-sql-db

./: CMakeLists.txt  LICENSE  README.md  SqlManager.cc  SqlManager.h  db-connect.cpp  simple-schema.sql  sql-connector.cc
